# Whiteye

./: .gitignore  Cargo.toml  README.md  program.txt  test.wy
src/: ast.rs  backend.rs  builtin_functions.rs  evaluator.rs  lexer.rs  lib.rs  machine.rs  main.rs  parser.rs  spec.txt  token.rs  value.rs
src/backend/: backend_type.rs  llvm.rs
src/backend/llvm/: function_code_generator.rs
src/parser/: conditional_expression.rs  expression.rs  function_call.rs  statement.rs  util.rs  variable.rs
