[package]
name = "whiteye"
version = "0.1.0"
authors = ["kn-shimada <xianrendaotian012@gmail.com>"]
edition = "2018"
description = "Whiteye language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
thiserror = "1.0.25"
anyhow = "1.0.40"
log = "0.4.0"
nom = "6"
clap = "2.20.3"