[package]
name = "whiteye"
version = "0.1.0"
authors = ["kn-shimada <xianrendaotian012@gmail.com>"]
edition = "2018"
description = "Whiteye language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "2.20.3"
env_logger = "0.9.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
log = "0.4.0"
nom = "6"
strum = { version = "0.21", features = ["derive"] }
thiserror = "1.0.25"
